--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,10 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "courseWizUiApp"
+  "moduleName": "courseWizUiApp",
+  "resolutions": {
+    "angular": "^1.3.0",
+    "fullcalendar": "~2.3.1",
+    "jquery": ">=1.6"
+  }
 }
